Camping and artist entity improvements